Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -125,7 +125,6 @@ header {
         ul {    
             width: 100%;
             margin: 14px 0;
-            text-align: center;
             @media @tablet {
                 padding: 0;
             }
